--- a/site/gatsby-site/i18n/locales/es/login.json
+++ b/site/gatsby-site/i18n/locales/es/login.json
@@ -23,5 +23,7 @@
   "Your Account": "Tu cuenta",
   "Subscribe": "Suscribirse",
   "Subscribe to Major Updates": "Subscribirse a las Principales Actualizaciones",
-  "Subscribe to New Incidents": "Subscribirse a Nuevos Incidentes"
+  "Subscribe to New Incidents": "Subscribirse a Nuevos Incidentes",
+  "Receive weekly AI Incident Briefing": "Recibir el resumen semanal de Incidentes AI",
+  "<0>Subscribe</0> to the \"AI Incident Briefing\" and receive weekly notifications about new incidents and other updates.": "<0>Suscríbete</0> al \"Resumen de Incidentes AI\" y recibe notificaciones semanales sobre nuevos incidentes y otras actualizaciones."
 }
