--- a/site/gatsby-site/i18n/locales/ja/login.json
+++ b/site/gatsby-site/i18n/locales/ja/login.json
@@ -23,5 +23,7 @@
   "Your Account": "あなたのアカウント",
   "Subscribe": "購読",
   "Subscribe to Major Updates": "主な更新を購読します",
-  "Subscribe to New Incidents": "新しいインシデントを購読します"
+  "Subscribe to New Incidents": "新しいインシデントを購読します",
+  "Receive weekly AI Incident Briefing": "週刊AIインシデントブリーフィングを購読します",
+  "<0>Subscribe</0> to the \"AI Incident Briefing\" and receive weekly notifications about new incidents and other updates.": "<0>購読</0> \"AIインシデントブリーフィング\" と週次の通知を受け取ります。"
 }
